[package]
name = "zrtp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
ring = "0.17"
reed-solomon-erasure = "6.0"
ffmpeg-next = "7.0"
futures = "0.3"
evdev = "0.12"
bytes = "1.0"
rand = "0.8"
tokio-tungstenite = "0.29.0"
